<!--
  Copyright 2013 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">Swipe to Dismiss Demo</string>
    <string name="heading_dismissable_views">Simple Views</string>
    <string name="heading_dismissable_list_view">ListView</string>

    <string name="default_name">Honors Pizza Friday</string>
    <string name="default_time">12:00 PM</string>
    <string name="default_location">Orange Hall</string>

    <string name="action_settings">Settings</string>
    <string name="action_enable_notify">Notify</string>

    <string name="title_activity_event">freets.me</string>

    <string name="pref_notify">Send notifications</string>
    <string name="pref_notify_summ">If checked, freets.me will notify you
    when free food is about to arrive!</string>

    <string name="pref_notify_when">Time before notifications</string>
    <string name="pref_notify_when_default">30</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
