<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_notify"
        android:title="@string/pref_notify"
        android:summary="@string/pref_notify_summ"
        android:defaultValue="true" />
    <ListPreference
        android:dependency="pref_notify"
        android:key="pref_notify_when"
        android:title="@string/pref_notify_when"
        android:dialogTitle="@string/pref_notify_when"
        android:entries="@array/pref_notify_when_entries"
        android:entryValues="@array/pref_notify_when_values"
        android:defaultValue="@string/pref_notify_when_default" />
    <ListPreference
        android:key="pref_location_id"
        android:title="Set college"
        android:summary="Choose your college so you can get tailored freets!"
        android:entries="@array/pref_location_id_entries"
        android:entryValues="@array/pref_location_id_values"
        android:defaultValue="812"
        />
</PreferenceScreen>